[Qt] assignToHTMLImageElement no longer exists in Qt5 https://bugs.webkit.org/show_bug.cgi?id=113639

Patch by Kristof Provost <kristof@codepro.be> on 2013-04-03
Reviewed by Simon Hausmann.

No new tests: covered by ./Source/WebKit/qt/tests/hybridPixmap/test.html

* bridge/qt/qt_pixmapruntime.cpp:
(JSC::Bindings::QtPixmapRuntime::getClassRef):

Canonical link: https://commits.webkit.org/132207@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147539 268f45cc-cd09-0410-ab3c-d52691b4dbfc